--- a/app/views/settings/profile.html.erb
+++ b/app/views/settings/profile.html.erb
@@ -17,7 +17,7 @@
           <% if Setting.has_profile_field? :company %>
           <div class="form-group">
             <%= f.label :company %>
-            <%= f.text_field :company, class: "form-control", style: "width: 400px" %>
+            <%= f.text_field :company, class: "form-control" %>
           </div>
           <% end %>
 
