--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -577,3 +577,8 @@ img.emoji { width:20px; height:20px; }
     li.next { float: right; }
   }
 }
+#navbar-header {
+  img {
+    width: 45px;
+  }
+}
