首页图片广告添加

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,86 @@
 <% if !mobile? %>
 <div class="hide-ios">
-  <%= raw Setting.index_html %>
+  <!-- <%= raw Setting.index_html %> -->
+  <div class="card hidden-xs">
+    <div class="card-body" style="text-align: center;">
+      <div class="media" style="">
+        <div class="swiper-container swiper-container-horizontal">
+          <div class="swiper-wrapper">
+            <% ['banner1.jpg', 'banner2.jpg', 'banner3.jpg'].each do |url| %>
+              <div class='swiper-slide'>
+                <img src= <%= "/images/#{url}" %> />
+              </div>
+            <% end %>
+          </div>
+          <div class="swiper-pagination"></div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="row home-icons hidden-sm hidden-xs">
+    <div class="col-md-2">
+      <div class="item item1">
+        <div class="icon">
+          <a href="/topics"><img src="/images/pic1.jpg"></a>
+        </div>
+        <div class="text">
+          <a href="/topics">房源租售 <i class="pull-right fa fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="item item2">
+        <div class="icon">
+          <a href="/wiki"><img src="/images/pic2.jpg"></a>
+        </div>
+        <div class="text">
+          <a href="/wiki">求职招聘 <i class="pull-right fa fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="item item3">
+        <div class="icon">
+          <a href="/jobs"><img src="/images/pic3.jpg"></a>
+        </div>
+        <div class="text">
+          <a href="/jobs">餐饮娱乐 <i class="pull-right fa fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="item item4">
+        <div class="icon">
+          <a href="/topics/popular"><img src="/images/pic4.jpg"></a>
+        </div>
+        <div class="text">
+          <a href="/topics/popular">游山玩水 <i class="pull-right fa fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="item item4">
+        <div class="icon">
+          <a href="/topics/popular"><img src="/images/pic5.jpg"></a>
+        </div>
+        <div class="text">
+          <a href="/topics/popular">商家中心 <i class="pull-right fa fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-2">
+      <div class="item item4">
+        <div class="icon">
+          <a href="/topics/popular"><img src="/images/pic6.jpg"></a>
+        </div>
+        <div class="text">
+          <a href="/topics/popular">社区小喇叭 <i class="pull-right fa fa-arrow-right"></i></a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <% end %>
 
