--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -4,6 +4,7 @@
  *= require social-share-button
  *= require jquery.atwho
  *= require jquery.fluidbox
+ *= require swiper.min
  *= require_self
  */
 
