--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -1,3 +1,4 @@
+
 @import "vars";
 
 #home_index { line-height:160%; }
@@ -82,6 +83,27 @@ h2 {
       .title {
         height: 30px;
         overflow: hidden;
+      }
+    }
+  }
+}
+.hide-ios {
+  .icon {
+    height: 140px;
+    img {
+      width: 100%;
+      @media (max-width: 480px) {
+        width: 37%;
+      }
+    }
+  }
+}
+.page-home {
+  .card-body {
+    padding: 0px;
+    .swiper-container {
+      img {
+        width: 100%;
       }
     }
   }
