--- a/app/views/account/new.html.erb
+++ b/app/views/account/new.html.erb
@@ -42,5 +42,22 @@
       </div>
     </div>
   </div>
-  <div class="col"></div>
+  <div class="col">
+    <div class="card">
+      <div class="card-header"><%= t("common.auth_with_other_services") %></div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">
+          <%= link_to raw("<i class='fa fa-mobile'></i> 手机"), sign_up_with_mobile_account_path, class: "btn btn-default btn-lg btn-block" %>
+        </li>
+        <li class="list-group-item">
+          <%= link_to raw("<i class='fa fa-wechat'></i> 微信"), omniauth_authorize_path(:user, mobile? ? :wechat : :open_wechat), class: "btn btn-default btn-lg btn-block" %>
+        </li>
+        <% if Setting.has_module? :github %>
+        <li class="list-group-item">
+          <%= link_to raw("<i class='fa fa-github'></i> GitHub"), omniauth_authorize_path(:user, :github), class: "btn btn-default btn-lg btn-block" %>
+        </li>
+        <% end %>
+      </ul>
+    </div>
+  </div>
 </div>
