--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -51,7 +51,7 @@
                   <input type="submit" name="commit" value="登录" class="btn btn-primary btn-block" data-disable-with="登录中...">
                 </div>
               </form>
-              <%= link_to '注册', '/account/sign_up', class: 'btn btn-outline-primary btn-block login-password' %>
+              <%= link_to '注册', '/account/sign_up_with_mobile', class: 'btn btn-outline-primary btn-block login-password' %>
               <div class="qrcode" style="display: none;">
                 <div class="qr_safe_tips">安全登录，防止被盗</div>
                 <img src="/images/pic2.jpg" alt="" class="qr-img">
