--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,7 @@
-<% if !mobile? && !current_user %>
+<% if !mobile? %>
 <div class="hide-ios">
   <!-- <%= raw Setting.index_html %> -->
+  <% if !current_user %>
   <div class="card hidden-xs">
     <div class="card-body" style="text-align: center;">
       <div class="media" style="">
@@ -64,6 +65,7 @@
       </div>
     </div>
   </div>
+  <% end %>
 
   <div class="row home-icons hidden-sm hidden-xs">
     <div class="col-md-2">
