--- a/app/views/account/new.html.erb
+++ b/app/views/account/new.html.erb
@@ -42,7 +42,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="col-lg-4">
     <div class="card">
       <div class="card-header"><%= t("common.auth_with_other_services") %></div>
       <ul class="list-group list-group-flush">
