--- a/app/views/account/sign_up_with_mobile.html.erb
+++ b/app/views/account/sign_up_with_mobile.html.erb
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <div class="col">
+  <div class="col-lg-4">
     <div class="col">
       <div class="card">
         <div class="card-header"><%= t("common.auth_with_other_services") %></div>
