--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,5 @@
 <% if !mobile? %>
-<div class="hide-ios">
+<div class="hide-ios" id="swiper">
   <!-- <%= raw Setting.index_html %> -->
   <% if !current_user %>
   <div class="card hidden-xs">
