--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -22,16 +22,16 @@
       <div class="col-md-4">
         <div class="card">
             <div class="card-header">
-              <ul class="nav nav-pills card-header-pills">
-                <li class="nav-item">
-                  <a class="nav-link active password-login" href="#">账号密码登录</a>
-                </li>
-                <li class="nav-item">
-                  <%= link_to '微信扫码登录', omniauth_authorize_path(:user, :open_wechat), class: 'nav-link qrcode-login' %>
-                </li>
-              </ul>
+              登录
             </div>
             <div class="card-body">
+              <%= link_to omniauth_authorize_path(:user, :open_wechat), class: 'btn btn-primary btn-block btn-wechat' do %>
+                <i class="fa fa-wechat"></i>
+                微信扫码登录
+              <% end %>
+              <div class="login-form-line">
+                <p class="or text-center">或</p>
+              </div>
               <form class="new_user login-password" id="new_user" action="/account/sign_in" accept-charset="UTF-8" data-remote="true" method="post"><input name="utf8" type="hidden" value="✓">
                 <div class="form-group">
                   <input class="form-control input-lg" placeholder="用户名 / Email" type="text" name="user[login]" id="user_login">
@@ -49,10 +49,10 @@
                 </div>
 
                 <div class="form-actions">
-                  <input type="submit" name="commit" value="登录" class="btn btn-primary btn-block" data-disable-with="登录中...">
+                  <input type="submit" name="commit" value="登录" class="btn btn-primary" data-disable-with="登录中...">
+                  <%= link_to '注册', '/account/sign_up_with_mobile', class: 'btn btn-outline-primary login-password' %>
                 </div>
               </form>
-              <%= link_to '注册', '/account/sign_up_with_mobile', class: 'btn btn-outline-primary btn-block login-password' %>
               <div class="qrcode" style="display: none;">
                 <div class="qr_safe_tips">安全登录，防止被盗</div>
                 <img src="/images/pic2.jpg" alt="" class="qr-img">
