根据节点分类进行展现

--- a/app/views/topics/_form.html.erb
+++ b/app/views/topics/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render 'node_selector', node: @topic.node %>
+<%= render 'topics/node_selector', node: @topic.node %>
 
 <%= form_for @topic, remote: true, class: "form", html: { tb: 'edit-topic' } do |f| %>
   <%= render "shared/error_messages", target: @topic %>
