--- a/app/views/admin/sections/_form.html.erb
+++ b/app/views/admin/sections/_form.html.erb
@@ -6,7 +6,7 @@
   </div>
 
   <div class="form-group">
-    <%= f.label :name %>
+    <%= f.label '排序' %>
     <%= f.text_field :sort, class: "form-control" %>
   </div>
 
