--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -71,60 +71,60 @@
     <div class="col-md-2">
       <div class="item item1">
         <div class="icon">
-          <a href="/topics"><img src="/images/pic1.jpg"></a>
+          <a href=<%= section_path(Setting.house)%>><img src="/images/pic1.jpg"></a>
         </div>
         <div class="text">
-          <a href="/topics">房源租售 <i class="pull-right fa fa-arrow-right"></i></a>
+          <a href=<%= section_path(Setting.house)%>>房源租售 <i class="pull-right fa fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
     <div class="col-md-2">
       <div class="item item2">
         <div class="icon">
-          <a href="/wiki"><img src="/images/pic2.jpg"></a>
+          <a href=<%= section_path(Setting.job)%>><img src="/images/pic2.jpg"></a>
         </div>
         <div class="text">
-          <a href="/wiki">求职招聘 <i class="pull-right fa fa-arrow-right"></i></a>
+          <a href=<%= section_path(Setting.job)%>>求职招聘 <i class="pull-right fa fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
     <div class="col-md-2">
       <div class="item item3">
         <div class="icon">
-          <a href="/jobs"><img src="/images/pic3.jpg"></a>
+          <a href=<%= section_path(Setting.food)%>><img src="/images/pic3.jpg"></a>
         </div>
         <div class="text">
-          <a href="/jobs">餐饮娱乐 <i class="pull-right fa fa-arrow-right"></i></a>
+          <a href=<%= section_path(Setting.food)%>>餐饮娱乐 <i class="pull-right fa fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
     <div class="col-md-2">
       <div class="item item4">
         <div class="icon">
-          <a href="/topics/popular"><img src="/images/pic4.jpg"></a>
+          <a href=<%= section_path(Setting.play)%>><img src="/images/pic4.jpg"></a>
         </div>
         <div class="text">
-          <a href="/topics/popular">游山玩水 <i class="pull-right fa fa-arrow-right"></i></a>
+          <a href=<%= section_path(Setting.play)%>>游山玩水 <i class="pull-right fa fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
     <div class="col-md-2">
       <div class="item item4">
         <div class="icon">
-          <a href="/topics/popular"><img src="/images/pic5.jpg"></a>
+          <a href=<%= section_path(Setting.buy)%>><img src="/images/pic5.jpg"></a>
         </div>
         <div class="text">
-          <a href="/topics/popular">商家中心 <i class="pull-right fa fa-arrow-right"></i></a>
+          <a href=<%= section_path(Setting.buy)%>>商家中心 <i class="pull-right fa fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
     <div class="col-md-2">
       <div class="item item4">
         <div class="icon">
-          <a href="/topics/popular"><img src="/images/pic6.jpg"></a>
+          <a href=<%= section_path(Setting.notice)%>><img src="/images/pic6.jpg"></a>
         </div>
         <div class="text">
-          <a href="/topics/popular">社区小喇叭 <i class="pull-right fa fa-arrow-right"></i></a>
+          <a href=<%= section_path(Setting.notice)%>>社区小喇叭 <i class="pull-right fa fa-arrow-right"></i></a>
         </div>
       </div>
     </div>
