--- a/app/views/shared/_index_sections.html.erb
+++ b/app/views/shared/_index_sections.html.erb
@@ -5,7 +5,7 @@
     <div class="row node-list">
       <% Section.includes(:nodes).all.each do |section| %>
       <div class="node media">
-        <label class="mr-2 media-left"><%= section.name %></label>
+        <label class="mr-2 media-left"><%= link_to section.name, section_path(section.id) %></label>
         <span class="nodes media-body">
           <% section.nodes.sorted.each do |node| %>
             <span class="name"><%= link_to(node.name, node_topics_path(node), title: node.name, data: { id: node.id })%></span>
