调整首页登录框

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -116,6 +116,7 @@ h2 {
       max-width: 29%;
     }
     .card {
+      opacity: 0.96;
       border-radius: 1rem;
       border-color: rgb(226, 241, 231);
       .card-header {
