--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -72,7 +72,7 @@
         <li><a href="/wiki/copyright">隐私与版权<span class="rborder"></span></a></li>
         <li><a href="/wiki/help">帮助中心<span class="rborder"></span></a></li>
         <li><a href="/wiki/thanks">特别鸣谢<span class="rborder"></span></a></li>
-        <li><a href="/wiki/help">联系我们</a></li>
+        <li><a href="/wiki/contact">联系我们</a></li>
       </ul>
       <ul class="footer_menu">
         <li><a href="/wiki/intro">普惠社区</a></li>
