--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -68,14 +68,14 @@
     <div class="container">
       <!-- <%= raw Setting.footer_html %> -->
       <ul class="footer_menu">
-        <li><a href="/wiki/about">关于普惠<span class="rborder"></span></a></li>
+        <li><a href="/wiki/intro">普惠社区<span class="rborder"></span></a></li>
         <li><a href="/wiki/copyright">隐私与版权<span class="rborder"></span></a></li>
         <li><a href="/wiki/help">帮助中心<span class="rborder"></span></a></li>
         <li><a href="/wiki/thanks">特别鸣谢<span class="rborder"></span></a></li>
         <li><a href="/wiki/contact">联系我们</a></li>
       </ul>
       <ul class="footer_menu">
-        <li><a href="/wiki/intro">普惠社区</a></li>
+        <li>普惠社区</li>
         <li>惠泽于民</li>
         <li>你我携手</li>
         <li>共享生活</li>
