--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,10 +1,17 @@
 <ul id="main-nav-menu" class="navbar-nav d-flex">
-  <%= render_list_items do |li|
+  <!-- <%= render_list_items do |li|
     li << link_to(t("menu.topics"), Setting.has_module?(:home) ? main_app.topics_path : main_app.root_path, class: "nav-link")
 
     Homeland.navbar_plugins.each do |plugin|
       li << link_to(plugin.display_name, plugin.root_path, class: "nav-link") if Setting.has_module?(plugin.name)
     end
-  end %>
+  end %> -->
+  <ul id="main-nav-menu" class="navbar-nav d-flex">
+    <li class="nav-item"><a class="nav-link <%= current_page?('/topics') ? 'active' : ''%>" href="/topics">社区</a></li>
+    <li class="nav-item"><a class="nav-link <%= current_page?('/posts') ? 'active' : ''%>" href="/posts">头条</a></li>
+    <li class="nav-item"><a class="nav-link <%= current_page?('/sections/2') || Section.find(Setting.job).nodes.map{|n| "/topics/node#{n.id}"}.include?(request.url) ? 'active' : ''%>" href=<%= Rails.application.routes.url_helpers.section_path(Setting.job) %>>招聘</a></li>
+    <li class="nav-item"><a class="nav-link <%= current_page?('/topics/node10') ? 'active' : ''%>" href="/topics/node10">物业</a></li>
+    <li class="nav-item"><a class="nav-link <%= current_page?('/wiki/cooperation') ? 'active' : ''%>" href="/wiki/cooperation">合作</a></li>
+  </ul>
   <%= raw Setting.navbar_html %>
 </ul>
