--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -908,3 +908,13 @@ textarea.div-dropzone-focus { border-color: #BBE1C9; background: #fafafa; }
     i.fa { color: #aaa; }
   }
 }
+#homeland-wiki {
+  .markdown img {
+    width: 100%;
+  }
+  .markdown-toc {
+    .toc-container {
+      display: none;
+    }
+  }
+}
