--- a/app/views/account/new.html.erb
+++ b/app/views/account/new.html.erb
@@ -4,14 +4,11 @@
   <div class="col"></div>
   <div class="col-lg-6">
     <div class="card">
-      <div class="card-header"><%= t("users.register_user")%></div>
+      <div class="card-header">邮箱注册</div>
       <div class="card-body">
         <%= form_for resource, as: resource_name, url: registration_path(resource_name), remote: true do |f| %>
         <div class="form-group">
           <%= f.text_field :login, class: "form-control input-lg", placeholder: t("users.login"), hint: t("users.suggest_using_twitter_id") %>
-        </div>
-        <div class="form-group">
-          <%= f.text_field :name, class: "form-control input-lg", placeholder: t("activerecord.attributes.user.name") %>
         </div>
         <div class="form-group">
           <%= f.text_field :email, type: :email, class: "form-control input-lg", placeholder: t("activerecord.attributes.user.email") %>
@@ -36,7 +33,6 @@
 
         <div class="form-group">
           <%= f.submit t('users.submit_new_user'), class: "btn btn-lg btn-primary", 'data-disable-with' => t("common.submitting") %>
-          <%= link_to t("common.login"), new_session_path(resource_name), class: "btn btn-lg btn-default hide-ios" %>
         </div>
         <% end %>
       </div>
