--- a/app/views/account/sign_up_with_mobile.html.erb
+++ b/app/views/account/sign_up_with_mobile.html.erb
@@ -40,7 +40,7 @@
         <div class="card-header"><%= t("common.auth_with_other_services") %></div>
         <ul class="list-group list-group-flush">
           <li class="list-group-item">
-            <%= link_to raw("<i class='fa fa-wechat'></i> 微信"), omniauth_authorize_path(:user, mobile? ? :wechat : :open_wechat), class: "btn btn-default btn-lg btn-block" %>
+            <%= link_to raw("<i class='fa fa-wechat'></i> 微信"), omniauth_authorize_path(:user, mobile? ? :wechat : :open_wechat), class: "btn btn-default btn-lg btn-block " + (mobile? ? '' : 'open-wechat') %>
           </li>
           <li class="list-group-item">
             <%= link_to raw("<i class='fa fa-envelope'></i> 邮箱"), new_user_registration_path, class: "btn btn-default btn-lg btn-block" %>
