--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -248,9 +248,9 @@ footer {
         display: inline-block;
         float: none;
         a {
-          color: #778f9c;
+          color: #909090;
           font-family: 'Lato',Helvetica,Arial,sans-serif;
-          font-size: 16px;
+          font-size: 15px;
           margin: 0 0.0625em 0.1875em 0;
           padding: 0.1875em 0.25em 0;
           .rborder {
