--- a/app/views/account/sign_up_with_mobile.html.erb
+++ b/app/views/account/sign_up_with_mobile.html.erb
@@ -24,7 +24,7 @@
         <%= f.password_field :password, class: "form-control input-lg", placeholder: "密码默认手机号后六位" %>
         </div>
         <div class="form-group">
-        <%= f.password_field :password_confirmation, class: "form-control input-lg", placeholder: '密码默认手机号后六位' %>
+        <%= f.password_field :password_confirmation, class: "form-control input-lg" %>
         </div>
 
         <div class="form-group">
