可滑动图片

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
   <div class="card hidden-xs">
     <div class="card-body" style="text-align: center;">
       <div class="media" style="">
-        <div class="swiper-container">
+        <div class="swiper-container home">
           <div class="swiper-wrapper">
             <% ['banner1.jpg', 'banner2.jpg', 'banner3.jpg'].each do |url| %>
               <div class='swiper-slide'>
