--- a/app/views/account/sign_up_with_mobile.html.erb
+++ b/app/views/account/sign_up_with_mobile.html.erb
@@ -21,10 +21,10 @@
           <%= text_field_tag :verify_message_code, nil, class: "form-control input-lg", placeholder: "验证码" %>
         </div>
         <div class="form-group">
-        <%= f.password_field :password, class: "form-control input-lg", placeholder: "密码默认手机号后六位" %>
+        <%= f.password_field :password, class: "form-control input-lg", placeholder: "密码" %>
         </div>
         <div class="form-group">
-        <%= f.password_field :password_confirmation, class: "form-control input-lg" %>
+        <%= f.password_field :password_confirmation, class: "form-control input-lg", placeholder: "确认密码" %>
         </div>
 
         <div class="form-group">
