--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -17,6 +17,7 @@
   .node {
     margin-bottom: 10px;
     margin-top: 0px;
+    width: 50%;
     &:last-child { margin-bottom: 0px; }
     .media-left { min-width: 130px; }
     label { font-weight: normal; color: #aaa; text-align: right; }
