topic add sidebar

--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -921,3 +921,17 @@ textarea.div-dropzone-focus { border-color: #BBE1C9; background: #fafafa; }
     }
   }
 }
+.page-topics {
+  .suggest_topics {
+    .card {
+      margin-bottom: 1rem;
+    }
+    .card-img-top {
+      padding: 10px 40px;
+    }
+    .card-body {
+      text-align: center;
+      font-size: 13px;
+    }
+  }
+}
