--- a/app/views/topics/_node_selector.html.erb
+++ b/app/views/topics/_node_selector.html.erb
@@ -8,7 +8,7 @@
         </button>
       </div>
       <div class="modal-body">
-        <%= render '/shared/index_sections' %>
+        <%= render '/shared/table_sections' %>
       </div>
     </div>
   </div>
