--- a/app/assets/stylesheets/front.scss
+++ b/app/assets/stylesheets/front.scss
@@ -936,3 +936,17 @@ textarea.div-dropzone-focus { border-color: #BBE1C9; background: #fafafa; }
     }
   }
 }
+.page-topics {
+  .index-sections {
+    thead {
+      a {
+        color: #46893c;
+      }
+    }
+    tbody {
+      a {
+        color: #333;
+      }
+    }
+  }
+}
