--- a/app/views/topics/_node_info.html.erb
+++ b/app/views/topics/_node_info.html.erb
@@ -29,7 +29,7 @@
       <% else %>
         <%= render 'topics/node_selector' %>
         <ul class="filter nav nav-pills">
-          <li><a href="#" class="all-nodes" data-toggle="modal" data-target="#node-selector">所有节点 <span class="caret-right"></span></a></li>
+          <li><a href="#" class="all-nodes" data-toggle="modal" data-target="#node-selector">分类目录 <span class="caret-right"></span></a></li>
           <li class="<%= ' active' if action_name == 'index' %>">
             <a href="<%= main_app.topics_path %>" data-turbolinks-action="replace">默认</a>
           </li>
