--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -88,7 +88,7 @@
         <li class="list-group-item">公司／组织品牌展示；</li>
         <li class="list-group-item">独立的组织首页；</li>
         <li class="list-group-item">汇集成员在社区里面的话题；</li>
-        <li class="list-group-item">为团队招揽人才；</li>
+        <li class="list-group-item">为公司招揽人才；</li>
       </ul>
     </div>
   </div>
