--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,9 @@
   <div class="header navbar navbar-expand flex-md-row bd-navbar">
     <div class="container d-sm-flex">
       <div class="navbar-header d-none d-md-flex" id="navbar-header" data-turbolinks-permanent>
-        <%= raw Setting.navbar_brand_html %>
+        <a href="/" class="navbar-brand">
+          <img src="https://cdn.puhuishequ.cn/photo/2018/a2f20d09-1898-45f6-8cee-8bef2a11ad28.png?imageView2/1/w/1920" />
+        </a>
       </div>
       <div class="navbar-nav-scroll">
         <%= yield :header %>
