--- a/app/views/teams/new.html.erb
+++ b/app/views/teams/new.html.erb
@@ -32,7 +32,7 @@
           </div>
 
           <div class="form-text">
-            如你发现你的公司或组织名称被抢注，可以尝试联系管理员，我们可以尽可能的协调。
+            如你发现你的公司或团队名称被抢注，可以尝试联系管理员，我们可以尽可能的协调。
           </div>
         <% end %>
 
@@ -46,7 +46,7 @@
         <li class="list-group-item">公司／组织品牌展示；</li>
         <li class="list-group-item">独立的组织首页；</li>
         <li class="list-group-item">汇集成员在社区里面的话题；</li>
-        <li class="list-group-item">为公司招揽人才；</li>
+        <li class="list-group-item">为团队招揽人才；</li>
       </ul>
     </div>
   </div>
