--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -246,6 +246,7 @@ body {
 .sub-navbar {
   background: #f9f9f9;
   box-shadow: 0 1px 0px rgba(0, 0, 0, 0.02);
+  background-color: rgba(0,0,0,0.02);
 
   a { color: $blue; }
 }
