--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -140,11 +140,11 @@
       odd_topics, even_topics = @excellent_topics.partition.each_with_index { |t, i| i.odd?  }
     %>
     <div class="col-md-6 topics-group">
-      <%= render partial: "topics/topic", collection: even_topics, locals: { suggest: false } %>
+      <%= render partial: "topics/topic", collection: even_topics, locals: { suggest: false, image_size: 1 } %>
     </div>
 
     <div class="col-md-6 topics-group">
-      <%= render partial: "topics/topic", collection: odd_topics, locals: { suggest: false } %>
+      <%= render partial: "topics/topic", collection: odd_topics, locals: { suggest: false, image_size: 1 } %>
     </div>
     <% end %>
   </div>
